@@ -1,6 +1,6 @@
 rsnapshot TODO list:
 
-for version 1.1.x
+future versions (in no particular order)
 ------------------------------------------------------------------------------
 - Tighten up validation of third argument on backup points
 
